# -master-thesis-code-2024-2026

./: .gitignore  AGENTS.md  pyproject.toml
.codex/memory-bank/: active_context.md  decisions.md  experiments.md  glossary.md  thesis-paper-banana-block-scheme-prompts.md  thesis-writing-evidence.md
confs/experiments/: bnci2014_001.yaml  bnci2014_009.yaml  elastic_net_independent.yaml  elastic_net_multioutput.yaml  linear_svm.yaml  logistic_regression.yaml  pls_regression_multioutput.yaml  random_forest_independent.yaml  random_forest_multioutput.yaml  random_imagery_torch.yaml  ridge_classifier.yaml  ridge_regression_independent.yaml  ridge_regression_multioutput.yaml
confs/features/: default.yaml
confs/preprocessing/: common.yaml  fft.yaml  morlet.yaml  stft.yaml  superlet.yaml
experiments/: __init__.py
experiments/bnci2014_001/: __init__.py  baselines.py  config.py  data.py  (+7 more)
features/: __init__.py  classical.py  config.py  export.py  extractor.py  local_patterns.py  schemas.py  windowing.py
memory-bank/: active_context.md  decisions.md  experiments.md  glossary.md  project_brief.md
notebooks/: 1.0-base_dataset.ipynb  1.1-numpy_dataset.ipynb  1.2-disk-cache.ipynb  1.3-memory-cache.ipynb  1.4-cache-warmup.ipynb  2.0-dataset-overview.ipynb  2.1-fft.ipynb  2.2-morlet.ipynb  2.3-superlet.ipynb  2.4-stft.ipynb  2.5-spectral-methods-comparison.ipynb  3.0-torch-dataset-gpu.ipynb  3.1-torch-preprocessed-dataset-gpu.ipynb  4.0-classical-features.ipynb  4.1-local-patterns.ipynb  4.2-feature-dataset-export.ipynb  4.3-scientific-feature-validation.ipynb  5.0-logistic-regression-random-pixels.ipynb  5.1-logistic-regression-training.ipynb  5.2-classical-models-training.ipynb  5.3-classical-models-comparison.ipynb  6.0-torch-spectral-models-training.ipynb  6.1-torch-classical-comparison.ipynb  6.2-full-imagery-model-feature-sweep.ipynb  7.0-bnci2014-001-dataset-audit.ipynb  7.1-bnci2014-001-benchmark.ipynb  7.2-bnci2014-009-dataset-audit.ipynb  7.3-bnci2014-009-benchmark.ipynb  dataset.ipynb  playground.ipynb
preprocessors/: SUPERLET_LICENSE.txt  __init__.py  _frequency.py  _signal.py  _time_frequency.py  config.py  fft.py  morlet.py  schemas.py  stft.py  superlet.py
scripts/: generate_thesis_figures.py
tests/: test_bnci2014_009_benchmark_notebook.py  test_classical_models_comparison_notebook.py  test_classical_models_notebook.py  test_environment.py  test_feature_notebooks.py  test_full_imagery_sweep_comparison_notebook.py  test_logistic_regression_notebook.py  test_spectral_notebooks.py  test_torch_classical_comparison_notebook.py  test_torch_notebooks.py
utils/: io.py
(+1495 files in other folders)
