[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mne>=1.11.0",
    "numpy>=2.4.4",
    "omegaconf>=2.3.0",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[tool.ruff]
line-length = 119
extend-exclude = ["notebooks"]

[tool.ruff.lint]
extend-select = ["E501", "I"]
ignore = ["E712"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--strict-config",
    "--strict-markers",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.17",
]
